initial content visibility hidden working with one bug https://pasteboard.co/Ki9fbXt.png

--- a/app/_component/_themeAble/_frame/_pageSection/testSection/testSection.css
+++ b/app/_component/_themeAble/_frame/_pageSection/testSection/testSection.css
@@ -1,6 +1,9 @@
 :host {
   /* height: 80vh; */
-  background: linear-gradient(rgb(149, 255, 99), rgb(255, 199, 199));
+  background: linear-gradient(rgb(255, 99, 99), rgb(255, 128, 227));
+}
+component-body {
+  background: linear-gradient(rgb(149, 255, 99), rgb(150, 234, 255));
 }
 
 h2 {
